# voronoi-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate.py  generate_points.py  getopt_dict.py  more_users.txt  plotshp.py  polygon_triangulate.py  sites.txt  sites2.txt  vgame.h  vgtest.cc
CMake/Modules/: FindFIST.cmake  FindGMP.cmake  FindMPFR_CXX.cmake
FIST/lib/: FIST.lib
data/: users.txt
doc/: Makefile  README.bib  README.md.in  template.html
doc/bib/: 0196677483900123.bib  0377221789901616.bib  S0166218X1400300X.bib  S0377221709002914.bib  S0925772116300086.bib  S0925772117300135.bib  citation-271916855.bib  informs_trsc27_44.bib  matousek.bib  openstreetmap.bib  traveltimeplatform.bib  voronoi_complexity.bib
include/: Basic.h  intersection.h
lib/btree/: btree.h
scripts/: draw_game.m  draw_users.m  generate.py  plotshp.py
src/: Basic.cpp  CMakeLists.txt  boost_cv_compat.h  boost_geo_poly.h  btreetest.cc  components.cc  components.h  l23test.cc  l23tree.h  main.cc  main.h  maxrect.cc  maxrect.h  maxtri.cc  maxtri.h  nn1.h  opencv_compat.h  sweep.h  tree.h  treetest.cc  user.cc  user.h  util.h  vgame.cc  vgame.h  voronoi.cc  voronoi.h
src/mathtool/: Basic.h  CMakeLists.txt  Gauss.h  Matrix.h  Quaternion.cpp
src/shapefile/: CMakeLists.txt  adapt_boost_poly.h  gettime.h  intersection.h  polygon.cpp  polygon.h  shpReader.cpp  shpReader.h
src/shapefile/mathtool/: Basic.cpp  Gauss.cpp  Gauss.h  Point.h  Quaternion.h  Vector.h
src/shapefile/shapelib/: shpopen.cpp
src/shapelib/: CMakeLists.txt
